--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "css-loader": "^0.26.1",
+    "node-sass": "^4.2.0",
     "path": "^0.12.7",
+    "sass-loader": "^4.1.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
