--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
     "start": "webpack-dev-server --watch-poll --content-base/ --port 3000 --host 0.0.0.0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
+  },
   "devDependencies": {
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "css-loader": "^0.26.1",
+    "jshint": "^2.9.4",
+    "jshint-loader": "^0.8.3",
+    "node-libs-browser": "^2.0.0",
     "node-sass": "^4.2.0",
     "path": "^0.12.7",
     "sass-loader": "^4.1.1",
+    "strip-loader": "^0.1.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
