--- a/package.json
+++ b/package.json
@@ -2,14 +2,22 @@
   "name": "03",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --watch-poll --content-base/ --port 3000 --host 0.0.0.0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+		"humps": "^1.1.0",
+    "babel-polyfill": "^6.3.14",
+    "classnames": "^2.1.2",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-redux": "^4.2.1",
+    "redux": "^3.2.1",
+		"redux-thunk": "^2.1.0",
+		"normalizr": "^2.2.1",
+		"immutable": "^3.7.6"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
@@ -22,6 +30,11 @@
     "node-libs-browser": "^2.0.0",
     "node-sass": "^4.2.0",
     "path": "^0.12.7",
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.2.0",
+    "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.1.0",
     "sass-loader": "^4.1.1",
     "strip-loader": "^0.1.2",
     "style-loader": "^0.13.1",
